deploy: 077d7d1cb0c14eae719e6996b91cf87da05157a3

--- a/publication/dblp-bookscrclinked-14-boncz-ep-14/index.html
+++ b/publication/dblp-bookscrclinked-14-boncz-ep-14/index.html
@@ -292,10 +292,11 @@ Minh-Duc Pham.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-bookscrclinked-14-boncz-ep-14/cite.bib">
   
-  CITE
+  BIB
 </a>
 
 
@@ -308,6 +309,16 @@ Minh-Duc Pham.
 
 
 
+
+
+
+
+
+
+<a class="btn btn-outline-primary btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
 
 
 
