--- a/publication/dblp-confamw-angles-br-13/index.html
+++ b/publication/dblp-confamw-angles-br-13/index.html
@@ -292,10 +292,11 @@ Gonzalo Rios.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-confamw-angles-br-13/cite.bib">
   
-  CITE
+  BIB
 </a>
 
 
@@ -308,6 +309,16 @@ Gonzalo Rios.
 
 
 
+
+
+
+
+
+
+<a class="btn btn-outline-primary btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
 
 
 
