--- a/publication/dblp-confedbt-gubichev-014/index.html
+++ b/publication/dblp-confedbt-gubichev-014/index.html
@@ -283,11 +283,13 @@ Thomas Neumann.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-confedbt-gubichev-014/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -304,6 +306,9 @@ Thomas Neumann.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.5441/002/edbt.2014.40" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
