--- a/publication/dblp-confgrades-ngai-hhi-17/index.html
+++ b/publication/dblp-confgrades-ngai-hhi-17/index.html
@@ -284,11 +284,13 @@ Alexandru Iosup.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-confgrades-ngai-hhi-17/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -305,6 +307,9 @@ Alexandru Iosup.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1145/3078447.3078455" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
