--- a/publication/dblp-confgrades-prat-perez-gskdb-17/index.html
+++ b/publication/dblp-confgrades-prat-perez-gskdb-17/index.html
@@ -291,11 +291,13 @@ Davide Basilio Bartolini.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-confgrades-prat-perez-gskdb-17/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -312,6 +314,9 @@ Davide Basilio Bartolini.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1145/3078447.3078453" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
