--- a/publication/dblp-confgrades-szarnyas-pampkeb-18/index.html
+++ b/publication/dblp-confgrades-szarnyas-pampkeb-18/index.html
@@ -299,11 +299,13 @@ János Benjamin Antal.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-confgrades-szarnyas-pampkeb-18/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -320,6 +322,9 @@ János Benjamin Antal.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1145/3210259.3210268" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
