--- a/publication/dblp-conficde-gubichev-ab-14/index.html
+++ b/publication/dblp-conficde-gubichev-ab-14/index.html
@@ -285,11 +285,13 @@ Peter A. Boncz.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-conficde-gubichev-ab-14/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -306,6 +308,9 @@ Peter A. Boncz.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1109/ICDEW.2014.6818339" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
