--- a/publication/dblp-conficde-pham-13/index.html
+++ b/publication/dblp-conficde-pham-13/index.html
@@ -277,11 +277,13 @@ Minh-Duc Pham.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-conficde-pham-13/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -298,6 +300,9 @@ Minh-Duc Pham.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1109/ICDEW.2013.6547471" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
