--- a/publication/dblp-confsemweb-kotsev-mpefk-16/index.html
+++ b/publication/dblp-confsemweb-kotsev-mpefk-16/index.html
@@ -298,10 +298,11 @@ Atanas Kiryakov.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-confsemweb-kotsev-mpefk-16/cite.bib">
   
-  CITE
+  BIB
 </a>
 
 
@@ -314,6 +315,16 @@ Atanas Kiryakov.
 
 
 
+
+
+
+
+
+
+<a class="btn btn-outline-primary btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
 
 
 
