--- a/publication/dblp-confsemweb-phuoc-dpbef-12/index.html
+++ b/publication/dblp-confsemweb-phuoc-dpbef-12/index.html
@@ -291,11 +291,13 @@ Michael Fink.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-confsemweb-phuoc-dpbef-12/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -312,6 +314,9 @@ Michael Fink.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1007/978-3-642-35173-0_20" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
