--- a/publication/dblp-confsigmod-angles-abbfglpps-18/index.html
+++ b/publication/dblp-confsigmod-angles-abbfglpps-18/index.html
@@ -303,11 +303,13 @@ Hannes Voigt.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-confsigmod-angles-abbfglpps-18/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -324,6 +326,9 @@ Hannes Voigt.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1145/3183713.3190654" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
