--- a/publication/dblp-confsigmod-cattuto-qpa-13/index.html
+++ b/publication/dblp-confsigmod-cattuto-qpa-13/index.html
@@ -294,11 +294,13 @@ Alex Averbuch.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-confsigmod-cattuto-qpa-13/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -315,6 +317,15 @@ Alex Averbuch.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1145/2484425.2484442" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
+
+<a class="btn btn-outline-primary btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
+
 
 
 
