--- a/publication/dblp-confsigmod-erling-alcgppb-15/index.html
+++ b/publication/dblp-confsigmod-erling-alcgppb-15/index.html
@@ -295,11 +295,13 @@ Peter A. Boncz.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-confsigmod-erling-alcgppb-15/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -316,6 +318,9 @@ Peter A. Boncz.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1145/2723372.2742786" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
