--- a/publication/dblp-confsigmod-gubichev-bs-13/index.html
+++ b/publication/dblp-confsigmod-gubichev-bs-13/index.html
@@ -292,11 +292,13 @@ Stephan Seufert.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-confsigmod-gubichev-bs-13/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -313,6 +315,15 @@ Stephan Seufert.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1145/2484425.2484443" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
+
+<a class="btn btn-outline-primary btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
+
 
 
 
