--- a/publication/dblp-confsigmod-guisado-gamez-p-14/index.html
+++ b/publication/dblp-confsigmod-guisado-gamez-p-14/index.html
@@ -283,11 +283,13 @@ Arnau Prat-Pérez.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-confsigmod-guisado-gamez-p-14/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -304,6 +306,9 @@ Arnau Prat-Pérez.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1145/2764947.2764953" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
