--- a/publication/dblp-conftpctc-boncz-ne-13/index.html
+++ b/publication/dblp-conftpctc-boncz-ne-13/index.html
@@ -285,11 +285,13 @@ Orri Erling.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-conftpctc-boncz-ne-13/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -306,6 +308,9 @@ Orri Erling.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1007/978-3-319-04936-6_5" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
