--- a/publication/dblp-conftpctc-waudby-skmbs-20/index.html
+++ b/publication/dblp-conftpctc-waudby-skmbs-20/index.html
@@ -291,11 +291,13 @@ Gábor Szárnyas.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-conftpctc-waudby-skmbs-20/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -312,6 +314,9 @@ Gábor Szárnyas.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1007/978-3-030-84924-5_1" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
