--- a/publication/dblp-confwww-pham-peb-15/index.html
+++ b/publication/dblp-confwww-pham-peb-15/index.html
@@ -287,11 +287,13 @@ Peter A. Boncz.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-confwww-pham-peb-15/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -308,6 +310,9 @@ Peter A. Boncz.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1145/2736277.2741121" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
