--- a/publication/dblp-confwww-prat-perez-dl-14/index.html
+++ b/publication/dblp-confwww-prat-perez-dl-14/index.html
@@ -285,11 +285,13 @@ Josep Lluı́s Larriba-Pey.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-confwww-prat-perez-dl-14/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -306,6 +308,9 @@ Josep Lluı́s Larriba-Pey.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1145/2566486.2568010" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
