--- a/publication/dblp-journalscorrabs-1301-5121/index.html
+++ b/publication/dblp-journalscorrabs-1301-5121/index.html
@@ -290,10 +290,11 @@ Martin Neumann.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-journalscorrabs-1301-5121/cite.bib">
   
-  CITE
+  BIB
 </a>
 
 
@@ -306,6 +307,16 @@ Martin Neumann.
 
 
 
+
+
+
+
+
+
+<a class="btn btn-outline-primary btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
 
 
 
