--- a/publication/dblp-journalscorrabs-2001-02299/index.html
+++ b/publication/dblp-journalscorrabs-2001-02299/index.html
@@ -322,10 +322,11 @@ Jack Waudby.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-journalscorrabs-2001-02299/cite.bib">
   
-  CITE
+  BIB
 </a>
 
 
@@ -338,6 +339,16 @@ Jack Waudby.
 
 
 
+
+
+
+
+
+
+<a class="btn btn-outline-primary btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
 
 
 
