--- a/publication/dblp-journalscorrabs-2011-15028/index.html
+++ b/publication/dblp-journalscorrabs-2011-15028/index.html
@@ -322,10 +322,11 @@ Yinglong Xia.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-journalscorrabs-2011-15028/cite.bib">
   
-  CITE
+  BIB
 </a>
 
 
@@ -338,6 +339,16 @@ Yinglong Xia.
 
 
 
+
+
+
+
+
+
+<a class="btn btn-outline-primary btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
 
 
 
