--- a/publication/dblp-journalsdebu-erling-12/index.html
+++ b/publication/dblp-journalsdebu-erling-12/index.html
@@ -284,10 +284,11 @@ Orri Erling.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-journalsdebu-erling-12/cite.bib">
   
-  CITE
+  BIB
 </a>
 
 
@@ -300,6 +301,16 @@ Orri Erling.
 
 
 
+
+
+
+
+
+
+<a class="btn btn-outline-primary btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
 
 
 
