--- a/publication/dblp-journalspvldb-iosup-hnhpmccsat-16/index.html
+++ b/publication/dblp-journalspvldb-iosup-hnhpmccsat-16/index.html
@@ -314,11 +314,13 @@ Peter A. Boncz.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-journalspvldb-iosup-hnhpmccsat-16/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -335,6 +337,15 @@ Peter A. Boncz.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.14778/3007263.3007270" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
+
+<a class="btn btn-outline-primary btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
+
 
 
 
