--- a/publication/dblp-journalssigmod-angles-blf-0-enmkt-14/index.html
+++ b/publication/dblp-journalssigmod-angles-blf-0-enmkt-14/index.html
@@ -299,11 +299,13 @@ Ioan Toma.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-journalssigmod-angles-blf-0-enmkt-14/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -320,6 +322,9 @@ Ioan Toma.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1145/2627692.2627697" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
