--- a/publication/dblp-journalsws-loizou-ag-15/index.html
+++ b/publication/dblp-journalsws-loizou-ag-15/index.html
@@ -285,11 +285,13 @@ Paul Groth.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-journalsws-loizou-ag-15/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -306,6 +308,9 @@ Paul Groth.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1016/j.websem.2014.11.003" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
