--- a/publication/index.html
+++ b/publication/index.html
@@ -440,10 +440,11 @@ Leonid Libkin.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/ldbc-tr-tr-2021-01/cite.bib">
   
-  CITE
+  BIB
 </a>
 
 
@@ -456,6 +457,16 @@ Leonid Libkin.
 
 
 
+
+
+
+
+
+
+<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
 
 
 
@@ -534,11 +545,13 @@ Gábor Szárnyas.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-conftpctc-waudby-skmbs-20/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -555,6 +568,9 @@ Gábor Szárnyas.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1007/978-3-030-84924-5_1" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -662,10 +678,11 @@ Jack Waudby.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-journalscorrabs-2001-02299/cite.bib">
   
-  CITE
+  BIB
 </a>
 
 
@@ -678,6 +695,16 @@ Jack Waudby.
 
 
 
+
+
+
+
+
+
+<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
 
 
 
@@ -786,10 +813,11 @@ Yinglong Xia.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-journalscorrabs-2011-15028/cite.bib">
   
-  CITE
+  BIB
 </a>
 
 
@@ -802,6 +830,16 @@ Yinglong Xia.
 
 
 
+
+
+
+
+
+
+<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
 
 
 
@@ -876,11 +914,13 @@ Gábor Szárnyas.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-confsigmod-waudby-sps-20/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -897,6 +937,9 @@ Gábor Szárnyas.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1145/3398682.3399165" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -974,10 +1017,11 @@ Gábor Szárnyas.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-journalscorrabs-2010-12243/cite.bib">
   
-  CITE
+  BIB
 </a>
 
 
@@ -990,6 +1034,16 @@ Gábor Szárnyas.
 
 
 
+
+
+
+
+
+
+<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
 
 
 
@@ -1080,11 +1134,13 @@ Hannes Voigt.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-confsigmod-angles-abbfglpps-18/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -1101,6 +1157,9 @@ Hannes Voigt.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1145/3183713.3190654" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -1186,11 +1245,13 @@ János Benjamin Antal.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-confgrades-szarnyas-pampkeb-18/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -1207,6 +1268,9 @@ János Benjamin Antal.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1145/3210259.3210268" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -1284,11 +1348,13 @@ Davide Basilio Bartolini.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-confgrades-prat-perez-gskdb-17/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -1305,6 +1371,9 @@ Davide Basilio Bartolini.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1145/3078447.3078453" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -1375,11 +1444,13 @@ Alexandru Iosup.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-confgrades-ngai-hhi-17/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -1396,6 +1467,9 @@ Alexandru Iosup.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1145/3078447.3078455" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -1465,11 +1539,13 @@ Peter A. Boncz.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-confgrades-leo-b-17/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -1486,6 +1562,9 @@ Peter A. Boncz.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1145/3078447.3078457" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -1585,11 +1664,13 @@ Peter A. Boncz.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-journalspvldb-iosup-hnhpmccsat-16/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -1606,6 +1687,15 @@ Peter A. Boncz.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.14778/3007263.3007270" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
+
+<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
+
 
 
 </p>
@@ -1690,10 +1780,11 @@ Atanas Kiryakov.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-confsemweb-kotsev-mpefk-16/cite.bib">
   
-  CITE
+  BIB
 </a>
 
 
@@ -1706,6 +1797,16 @@ Atanas Kiryakov.
 
 
 
+
+
+
+
+
+
+<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
 
 
 
@@ -1776,11 +1877,13 @@ Arnau Prat-Pérez.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-confsigmod-guisado-gamez-p-14/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -1797,6 +1900,9 @@ Arnau Prat-Pérez.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1145/2764947.2764953" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -1878,11 +1984,13 @@ Peter A. Boncz.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-confsigmod-erling-alcgppb-15/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -1899,6 +2007,9 @@ Peter A. Boncz.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1145/2723372.2742786" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -1969,11 +2080,13 @@ Paul Groth.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-journalsws-loizou-ag-15/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -1990,6 +2103,9 @@ Paul Groth.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1016/j.websem.2014.11.003" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -2063,11 +2179,13 @@ Peter A. Boncz.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-confwww-pham-peb-15/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -2084,6 +2202,9 @@ Peter A. Boncz.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1145/2736277.2741121" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -2153,11 +2274,13 @@ David Domı́nguez-Sal.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-confsigmod-martinez-bazan-d-14/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -2174,6 +2297,9 @@ David Domı́nguez-Sal.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1145/2621934.2621943" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -2258,11 +2384,13 @@ Ioan Toma.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-journalssigmod-angles-blf-0-enmkt-14/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -2279,6 +2407,9 @@ Ioan Toma.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1145/2627692.2627697" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -2348,11 +2479,13 @@ Peter A. Boncz.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-conftpctc-gubichev-b-14/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -2369,6 +2502,9 @@ Peter A. Boncz.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1007/978-3-319-15350-6_8" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -2444,10 +2580,11 @@ Peter A. Boncz.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-journalsercim-pham-b-14/cite.bib">
   
-  CITE
+  BIB
 </a>
 
 
@@ -2460,6 +2597,16 @@ Peter A. Boncz.
 
 
 
+
+
+
+
+
+
+<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
 
 
 
@@ -2532,11 +2679,13 @@ David Domı́nguez-Sal.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-confrweb-larriba-pey-md-14/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -2553,6 +2702,9 @@ David Domı́nguez-Sal.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1007/978-3-319-10587-1_4" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -2624,11 +2776,13 @@ Peter A. Boncz.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-conficde-gubichev-ab-14/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -2645,6 +2799,9 @@ Peter A. Boncz.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1109/ICDEW.2014.6818339" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -2714,11 +2871,13 @@ David Domı́nguez-Sal.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-confsigmod-prat-d-14/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -2735,6 +2894,9 @@ David Domı́nguez-Sal.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1145/2621934.2621942" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -2806,11 +2968,13 @@ Josep Lluı́s Larriba-Pey.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-confwww-prat-perez-dl-14/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -2827,6 +2991,9 @@ Josep Lluı́s Larriba-Pey.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1145/2566486.2568010" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -2896,11 +3063,13 @@ Manuel Then.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-confsigmod-gubichev-t-14/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -2917,6 +3086,9 @@ Manuel Then.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1145/2621934.2621944" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -2986,11 +3158,13 @@ Thomas Neumann.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-confedbt-gubichev-014/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -3007,6 +3181,9 @@ Thomas Neumann.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.5441/002/edbt.2014.40" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -3085,10 +3262,11 @@ Minh-Duc Pham.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-bookscrclinked-14-boncz-ep-14/cite.bib">
   
-  CITE
+  BIB
 </a>
 
 
@@ -3101,6 +3279,16 @@ Minh-Duc Pham.
 
 
 
+
+
+
+
+
+
+<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
 
 
 
@@ -3179,10 +3367,11 @@ Peter A. Boncz.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-journalsercim-angles-pb-14/cite.bib">
   
-  CITE
+  BIB
 </a>
 
 
@@ -3195,6 +3384,16 @@ Peter A. Boncz.
 
 
 
+
+
+
+
+
+
+<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
 
 
 
@@ -3267,11 +3466,13 @@ Orri Erling.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-conftpctc-boncz-ne-13/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -3288,6 +3489,9 @@ Orri Erling.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1007/978-3-319-04936-6_5" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -3368,11 +3572,13 @@ Alex Averbuch.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-confsigmod-cattuto-qpa-13/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -3389,6 +3595,15 @@ Alex Averbuch.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1145/2484425.2484442" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
+
+<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
+
 
 
 </p>
@@ -3463,11 +3678,13 @@ Thomas Neumann.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-journalsdbsk-boncz-fgl-013/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -3484,6 +3701,9 @@ Thomas Neumann.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1007/s13222-013-0125-y" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -3562,11 +3782,13 @@ Stephan Seufert.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-confsigmod-gubichev-bs-13/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -3583,6 +3805,15 @@ Stephan Seufert.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1145/2484425.2484443" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
+
+<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
+
 
 
 </p>
@@ -3646,11 +3877,13 @@ Minh-Duc Pham.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-conficde-pham-13/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -3667,6 +3900,9 @@ Minh-Duc Pham.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1109/ICDEW.2013.6547471" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -3742,10 +3978,11 @@ Martin Neumann.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-journalscorrabs-1301-5121/cite.bib">
   
-  CITE
+  BIB
 </a>
 
 
@@ -3758,6 +3995,16 @@ Martin Neumann.
 
 
 
+
+
+
+
+
+
+<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
 
 
 
@@ -3843,11 +4090,13 @@ Aoying Zhou.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-confsigmod-ma-wqyxz-13/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -3864,6 +4113,15 @@ Aoying Zhou.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1145/2484425.2484435" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
+
+<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
+
 
 
 </p>
@@ -3944,11 +4202,13 @@ Josep Lluı́s Larriba-Pey.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-confsigmod-angles-pdl-13/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -3965,6 +4225,15 @@ Josep Lluı́s Larriba-Pey.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1145/2484425.2484440" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
+
+<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
+
 
 
 </p>
@@ -4043,10 +4312,11 @@ Gonzalo Rios.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-confamw-angles-br-13/cite.bib">
   
-  CITE
+  BIB
 </a>
 
 
@@ -4059,6 +4329,16 @@ Gonzalo Rios.
 
 
 
+
+
+
+
+
+
+<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
 
 
 
@@ -4129,10 +4409,11 @@ Orri Erling.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-journalsdebu-erling-12/cite.bib">
   
-  CITE
+  BIB
 </a>
 
 
@@ -4145,6 +4426,16 @@ Orri Erling.
 
 
 
+
+
+
+
+
+
+<a class="btn btn-outline-primary btn-sm btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
 
 
 
@@ -4217,11 +4508,13 @@ Orri Erling.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-conftpctc-pham-be-12/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -4238,6 +4531,9 @@ Orri Erling.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1007/978-3-642-36727-4_11" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -4315,11 +4611,13 @@ Michael Fink.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-confsemweb-phuoc-dpbef-12/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -4336,6 +4634,9 @@ Michael Fink.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1007/978-3-642-35173-0_20" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -4411,11 +4712,13 @@ Peter A. Boncz.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-confedbt-tsialiamanis-sfcb-12/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -4432,6 +4735,9 @@ Peter A. Boncz.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1145/2247596.2247635" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
@@ -4501,11 +4807,13 @@ Thomas Neumann.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
         data-filename="/publication/dblp-confcikm-gubichev-n-12/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -4522,6 +4830,9 @@ Thomas Neumann.
 <a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1145/2396761.2398460" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 </p>
