--- a/publication/ldbc-tr-tr-2021-01/index.html
+++ b/publication/ldbc-tr-tr-2021-01/index.html
@@ -296,10 +296,11 @@ Leonid Libkin.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/ldbc-tr-tr-2021-01/cite.bib">
   
-  CITE
+  BIB
 </a>
 
 
@@ -312,6 +313,16 @@ Leonid Libkin.
 
 
 
+
+
+
+
+
+
+<a class="btn btn-outline-primary btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
 
 
 
