--- a/publication/dblp-confcikm-gubichev-n-12/index.html
+++ b/publication/dblp-confcikm-gubichev-n-12/index.html
@@ -283,11 +283,13 @@ Thomas Neumann.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-confcikm-gubichev-n-12/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -304,6 +306,9 @@ Thomas Neumann.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1145/2396761.2398460" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
