--- a/publication/dblp-confedbt-tsialiamanis-sfcb-12/index.html
+++ b/publication/dblp-confedbt-tsialiamanis-sfcb-12/index.html
@@ -289,11 +289,13 @@ Peter A. Boncz.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-confedbt-tsialiamanis-sfcb-12/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -310,6 +312,9 @@ Peter A. Boncz.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1145/2247596.2247635" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
