--- a/publication/dblp-confgrades-leo-b-17/index.html
+++ b/publication/dblp-confgrades-leo-b-17/index.html
@@ -283,11 +283,13 @@ Peter A. Boncz.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-confgrades-leo-b-17/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -304,6 +306,9 @@ Peter A. Boncz.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1145/3078447.3078457" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
