--- a/publication/dblp-confrweb-larriba-pey-md-14/index.html
+++ b/publication/dblp-confrweb-larriba-pey-md-14/index.html
@@ -285,11 +285,13 @@ David Domı́nguez-Sal.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-confrweb-larriba-pey-md-14/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -306,6 +308,9 @@ David Domı́nguez-Sal.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1007/978-3-319-10587-1_4" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
