--- a/publication/dblp-confsigmod-ma-wqyxz-13/index.html
+++ b/publication/dblp-confsigmod-ma-wqyxz-13/index.html
@@ -298,11 +298,13 @@ Aoying Zhou.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-confsigmod-ma-wqyxz-13/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -319,6 +321,15 @@ Aoying Zhou.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1145/2484425.2484435" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
+
+<a class="btn btn-outline-primary btn-sm" href="" target="_blank" rel="noopener">
+  
+ INTERNET ARCHIVE
+</a>
+
 
 
 
