--- a/publication/dblp-confsigmod-martinez-bazan-d-14/index.html
+++ b/publication/dblp-confsigmod-martinez-bazan-d-14/index.html
@@ -283,11 +283,13 @@ David Domı́nguez-Sal.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-confsigmod-martinez-bazan-d-14/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -304,6 +306,9 @@ David Domı́nguez-Sal.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1145/2621934.2621943" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
