--- a/publication/dblp-confsigmod-waudby-sps-20/index.html
+++ b/publication/dblp-confsigmod-waudby-sps-20/index.html
@@ -287,11 +287,13 @@ Gábor Szárnyas.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-confsigmod-waudby-sps-20/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -308,6 +310,9 @@ Gábor Szárnyas.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1145/3398682.3399165" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
