--- a/publication/dblp-conftpctc-gubichev-b-14/index.html
+++ b/publication/dblp-conftpctc-gubichev-b-14/index.html
@@ -283,11 +283,13 @@ Peter A. Boncz.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-conftpctc-gubichev-b-14/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -304,6 +306,9 @@ Peter A. Boncz.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1007/978-3-319-15350-6_8" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
