--- a/publication/dblp-conftpctc-pham-be-12/index.html
+++ b/publication/dblp-conftpctc-pham-be-12/index.html
@@ -285,11 +285,13 @@ Orri Erling.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-conftpctc-pham-be-12/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -306,6 +308,9 @@ Orri Erling.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1007/978-3-642-36727-4_11" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
