--- a/publication/dblp-journalsdbsk-boncz-fgl-013/index.html
+++ b/publication/dblp-journalsdbsk-boncz-fgl-013/index.html
@@ -289,11 +289,13 @@ Thomas Neumann.
 
 
 
+
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
         data-filename="/publication/dblp-journalsdbsk-boncz-fgl-013/cite.bib">
   
-  CITE
+  BIB
 </a>
+
 
 
 
@@ -310,6 +312,9 @@ Thomas Neumann.
 <a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1007/s13222-013-0125-y" target="_blank" rel="noopener">
   DOI
 </a>
+
+
+
 
 
 
