deploy: 9859ad64b45a96e552f0b0bc64cca4aa49015c42

--- a/publication/index.html
+++ b/publication/index.html
@@ -404,7 +404,7 @@
 
   and
 
-Leonid Libkin.
+Leonid Libkin
 
 </span>
 
@@ -515,7 +515,7 @@ Leonid Libkin.
 
   and
 
-Gábor Szárnyas.
+Gábor Szárnyas
 
 </span>
 
@@ -642,7 +642,7 @@ Gábor Szárnyas.
 
   and
 
-Jack Waudby.
+Jack Waudby
 
 </span>
 
@@ -777,7 +777,7 @@ Jack Waudby.
 
   and
 
-Yinglong Xia.
+Yinglong Xia
 
 </span>
 
@@ -884,7 +884,7 @@ Yinglong Xia.
 
   and
 
-Gábor Szárnyas.
+Gábor Szárnyas
 
 </span>
 
@@ -981,7 +981,7 @@ Gábor Szárnyas.
 
   and
 
-Gábor Szárnyas.
+Gábor Szárnyas
 
 </span>
 
@@ -1104,7 +1104,7 @@ Gábor Szárnyas.
 
   and
 
-Hannes Voigt.
+Hannes Voigt
 
 </span>
 
@@ -1215,7 +1215,7 @@ Hannes Voigt.
 
   and
 
-János Benjamin Antal.
+János Benjamin Antal
 
 </span>
 
@@ -1318,7 +1318,7 @@ János Benjamin Antal.
 
   and
 
-Davide Basilio Bartolini.
+Davide Basilio Bartolini
 
 </span>
 
@@ -1417,7 +1417,7 @@ Davide Basilio Bartolini.
 
   and
 
-Alexandru Iosup.
+Alexandru Iosup
 
 </span>
 
@@ -1509,7 +1509,7 @@ Alexandru Iosup.
 
   and
 
-Peter A. Boncz.
+Peter A. Boncz
 
 </span>
 
@@ -1628,7 +1628,7 @@ Peter A. Boncz.
 
   and
 
-Peter A. Boncz.
+Peter A. Boncz
 
 </span>
 
@@ -1743,7 +1743,7 @@ Peter A. Boncz.
 
   and
 
-Atanas Kiryakov.
+Atanas Kiryakov
 
 </span>
 
@@ -1847,7 +1847,7 @@ Atanas Kiryakov.
 
   and
 
-Arnau Prat-Pérez.
+Arnau Prat-Pérez
 
 </span>
 
@@ -1954,7 +1954,7 @@ Arnau Prat-Pérez.
 
   and
 
-Peter A. Boncz.
+Peter A. Boncz
 
 </span>
 
@@ -2051,7 +2051,7 @@ Peter A. Boncz.
 
   and
 
-Paul Groth.
+Paul Groth
 
 </span>
 
@@ -2149,7 +2149,7 @@ Paul Groth.
 
   and
 
-Peter A. Boncz.
+Peter A. Boncz
 
 </span>
 
@@ -2244,7 +2244,7 @@ Peter A. Boncz.
 
   and
 
-David Domı́nguez-Sal.
+David Domı́nguez-Sal
 
 </span>
 
@@ -2355,7 +2355,7 @@ David Domı́nguez-Sal.
 
   and
 
-Ioan Toma.
+Ioan Toma
 
 </span>
 
@@ -2449,7 +2449,7 @@ Ioan Toma.
 
   and
 
-Peter A. Boncz.
+Peter A. Boncz
 
 </span>
 
@@ -2544,7 +2544,7 @@ Peter A. Boncz.
 
   and
 
-Peter A. Boncz.
+Peter A. Boncz
 
 </span>
 
@@ -2649,7 +2649,7 @@ Peter A. Boncz.
 
   and
 
-David Domı́nguez-Sal.
+David Domı́nguez-Sal
 
 </span>
 
@@ -2746,7 +2746,7 @@ David Domı́nguez-Sal.
 
   and
 
-Peter A. Boncz.
+Peter A. Boncz
 
 </span>
 
@@ -2841,7 +2841,7 @@ Peter A. Boncz.
 
   and
 
-David Domı́nguez-Sal.
+David Domı́nguez-Sal
 
 </span>
 
@@ -2938,7 +2938,7 @@ David Domı́nguez-Sal.
 
   and
 
-Josep Lluı́s Larriba-Pey.
+Josep Lluı́s Larriba-Pey
 
 </span>
 
@@ -3033,7 +3033,7 @@ Josep Lluı́s Larriba-Pey.
 
   and
 
-Manuel Then.
+Manuel Then
 
 </span>
 
@@ -3128,7 +3128,7 @@ Manuel Then.
 
   and
 
-Thomas Neumann.
+Thomas Neumann
 
 </span>
 
@@ -3225,7 +3225,7 @@ Thomas Neumann.
 
   and
 
-Minh-Duc Pham.
+Minh-Duc Pham
 
 </span>
 
@@ -3331,7 +3331,7 @@ Minh-Duc Pham.
 
   and
 
-Peter A. Boncz.
+Peter A. Boncz
 
 </span>
 
@@ -3436,7 +3436,7 @@ Peter A. Boncz.
 
   and
 
-Orri Erling.
+Orri Erling
 
 </span>
 
@@ -3535,7 +3535,7 @@ Orri Erling.
 
   and
 
-Alex Averbuch.
+Alex Averbuch
 
 </span>
 
@@ -3649,7 +3649,7 @@ Alex Averbuch.
 
   and
 
-Thomas Neumann.
+Thomas Neumann
 
 </span>
 
@@ -3745,7 +3745,7 @@ Thomas Neumann.
 
   and
 
-Stephan Seufert.
+Stephan Seufert
 
 </span>
 
@@ -3847,7 +3847,7 @@ Stephan Seufert.
 
 
 
-Minh-Duc Pham.
+Minh-Duc Pham
 
 </span>
 
@@ -3942,7 +3942,7 @@ Minh-Duc Pham.
 
   and
 
-Martin Neumann.
+Martin Neumann
 
 </span>
 
@@ -4053,7 +4053,7 @@ Martin Neumann.
 
   and
 
-Aoying Zhou.
+Aoying Zhou
 
 </span>
 
@@ -4165,7 +4165,7 @@ Aoying Zhou.
 
   and
 
-Josep Lluı́s Larriba-Pey.
+Josep Lluı́s Larriba-Pey
 
 </span>
 
@@ -4275,7 +4275,7 @@ Josep Lluı́s Larriba-Pey.
 
   and
 
-Gonzalo Rios.
+Gonzalo Rios
 
 </span>
 
@@ -4373,7 +4373,7 @@ Gonzalo Rios.
 
 
 
-Orri Erling.
+Orri Erling
 
 </span>
 
@@ -4478,7 +4478,7 @@ Orri Erling.
 
   and
 
-Orri Erling.
+Orri Erling
 
 </span>
 
@@ -4581,7 +4581,7 @@ Orri Erling.
 
   and
 
-Michael Fink.
+Michael Fink
 
 </span>
 
@@ -4682,7 +4682,7 @@ Michael Fink.
 
   and
 
-Peter A. Boncz.
+Peter A. Boncz
 
 </span>
 
@@ -4777,7 +4777,7 @@ Peter A. Boncz.
 
   and
 
-Thomas Neumann.
+Thomas Neumann
 
 </span>
 
